--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     <div class="flex mt-12">
         <div class="card w-96 bg-base-100 shadow-xl">
           <figure class="px-10 pt-10">
-            <img src="/images/fruit6.png" alt="Shoes" class="rounded-xl" />
+            <img src="./images/fruit6.png" alt="Shoes" class="rounded-xl" />
           </figure>
           <div class="card-body items-center text-center p-12">
             <h2 class="card-title font-extrabold">12.90$ - 18.85$</h2>
@@ -241,17 +241,21 @@
       </section>
       <!-- Why Choose Us section start -->
       <section class="my-24">
-        <h2 class="text-5xl font-extrabold text-center">Why Choose Us</h2>
-        <p class="text-center">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
-        <div>
-
-        </div>
-        <div>
+          <h2 class="text-5xl font-extrabold text-center">Why Choose Us</h2>
+          <p class="text-center">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+        <div class="flex my-12">
+          <div>
+          <h4>Dedicated Team</h4>
+          <hr>
+          <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+          </div>
+          <div>
           <img src="images/whychoose1.png" alt="">
-        </div>
-        <div>
+          </div>
+          <div>
 
-        </div>
+          </div>
+        </div> 
       </section>
     </main>
       
