banner contend added

--- a/index.html
+++ b/index.html
@@ -103,6 +103,14 @@
            <div class="carousel w-full">
             <div id="slide1" class="carousel-item relative w-full">
               <img src="./images/banner1.png" class="w-full" />
+              <div class="absolute flex justify-center items-center">
+                <div>
+                  <h2 class="text-5xl font-extrabold">Exotic tastes at your<br>
+                  doorstep</h2>
+                  <p >We supply highly quality organic products</p>
+                  <button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg">Shop Now</button>
+                </div>
+              </div>
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <a href="#slide4" class="btn btn-circle">❮</a> 
                 <a href="#slide2" class="btn btn-circle">❯</a>
@@ -131,17 +139,6 @@
             </div>
           </div>
           <!-- backgraund end   -->
-
-        <div class="banner-content text-center my-24">
-          <h2 class="text-5xl font-extrabold">Exotic tastes at your<br>
-             doorstep</h2>
-             <p >We supply highly quality organic products</p>
-             <button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg">Shop Now</button>
-
-
-         
-        </div>
-
       </section>
       <!-- Deal of the day section start -->
       <section class="my-24">
