--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
            <div class="carousel w-full">
             <div id="slide1" class="carousel-item relative w-full">
               <img src="./images/banner1.png" class="w-full" />
-              <div class="absolute flex justify-center items-center">
-                <div>
+              <div class="absolute flex justify-center transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <div class="text-center text-white">
                   <h2 class="text-5xl font-extrabold">Exotic tastes at your<br>
                   doorstep</h2>
                   <p >We supply highly quality organic products</p>
@@ -138,6 +138,28 @@
               </div>
             </div>
           </div>
+        <div class="flex justify-around shadow p-4">
+          <!-- img 1 -->
+          <div>
+            <img src="./images/fruit1.png" alt="">
+            <p>Strawberry</p>
+          </div>
+          <!-- img 2 -->
+          <div>
+            <img src="./images/fruit2.png" alt="">
+            <p>Strawberry</p>
+          </div>
+          <!-- img 3 -->
+          <div>
+            <img src="./images/fruit3.png" alt="">
+            <p>Strawberry</p>
+          </div>
+          <!-- img 4 -->
+          <div class=" ">
+            <img src="./images/fruit4.png" alt="">
+            <p>Strawberry</p>
+          </div>
+        </div>
           <!-- backgraund end   -->
       </section>
       <!-- Deal of the day section start -->
