banner section done

--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
       <section class="banner-section my-12 ">
            <!-- backgraund start -->
            <div class="carousel w-full">
-            <div id="slide1" class="carousel-item relative w-full">
-              <img src="./images/banner1.png" class="w-full" />
+            <div id="slide1" class="carousel-item relative w-full ">
+              <img src="./images/banner1.png" class="w-full opacity-75" />
               <div class="absolute flex justify-center transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <div class="text-center text-white">
-                  <h2 class="text-5xl font-extrabold">Exotic tastes at your<br>
+                  <h2 class="text-5xl font-extrabold drop-shadow-md">Exotic tastes at your<br>
                   doorstep</h2>
-                  <p >We supply highly quality organic products</p>
+                  <p class="drop-shadow-md text-xl" >We supply highly quality organic products</p>
                   <button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg">Shop Now</button>
                 </div>
               </div>
@@ -138,7 +138,7 @@
               </div>
             </div>
           </div>
-        <div class="flex justify-around shadow p-4">
+        <div class="flex justify-center  gap-20 bg-white shadow p-8 absolute -mt-20 ms-56 rounded">
           <!-- img 1 -->
           <div>
             <img src="./images/fruit1.png" alt="">
@@ -157,6 +157,11 @@
           <!-- img 4 -->
           <div class=" ">
             <img src="./images/fruit4.png" alt="">
+            <p>Strawberry</p>
+          </div>
+          <!-- img 4 -->
+          <div class=" ">
+            <img src="./images/fruit5.png" alt="">
             <p>Strawberry</p>
           </div>
         </div>
