deal of the day section done

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </header>
     <main class="container mx-auto">
       <!-- banner section start -->
-      <section class="banner-section my-12 ">
+      <section class="banner-section my-24 ">
            <!-- backgraund start -->
            <div class="carousel w-full">
             <div id="slide1" class="carousel-item relative w-full ">
@@ -168,16 +168,17 @@
           <!-- backgraund end   -->
       </section>
       <!-- Deal of the day section start -->
-      <section class="my-24">
+      <section class="mt-52">
         <div class="flex justify-between">
         <div>
           <h3 class="text-5xl font-extrabold">Deal of the day</h3>
           <p class="mt-6">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
-        </div>
-        <div class="grid grid-flow-col gap-5 text-center auto-cols-max">
+        </div> 
+        <!-- date start -->
+        <div class="grid grid-flow-col gap-5 text-center font-extrabold auto-cols-max">
           <div class="flex flex-col">
             <span class="countdown font-mono text-5xl">
-              <span style="--value:15;"></span>
+              <span style="--value:29;"></span>
             </span>
             days
           </div> 
@@ -201,31 +202,110 @@
           </div>
         </div>
       </div>
-
+       
         <!-- card 1 start -->
-    <div class="flex mt-12">
-        <div class="card w-96 bg-base-100 shadow-xl">
-          <figure class="px-10 pt-10">
-            <img src="./images/fruit6.png" alt="Shoes" class="rounded-xl" />
-          </figure>
-          <div class="card-body items-center text-center p-12">
-            <h2 class="card-title font-extrabold">12.90$ - 18.85$</h2>
-            <hr>
-            <p>Apples</p>
-
-            <!-- reatings start -->
-            <svg xmlns="http://www.w3.org/2000/svg" width="160" height="24" viewBox="0 0 160 24" fill="none">
-              <path d="M45.8527 0L50.4015 7.00591L58.4702 9.16716L53.2129 15.6584L53.6507 24L45.8527 21.0059L38.0546 24L38.4925 15.6584L33.2351 9.16716L41.3038 7.00591L45.8527 0Z" fill="#F85559"/>
-              <path d="M45.9037 0L50.4526 7.00591L58.5213 9.16716L53.264 15.6584L53.7018 24L45.9037 21.0059V0Z" fill="#FBC0A8"/>
-              <path d="M12.6176 0L17.1664 7.00591L25.2351 9.16716L19.9778 15.6584L20.4156 24L12.6176 21.0059L4.81952 24L5.25735 15.6584L0 9.16716L8.06871 7.00591L12.6176 0Z" fill="#F85559"/>
-              <path d="M79.6176 0L84.1664 7.00591L92.2351 9.16716L86.9778 15.6584L87.4156 24L79.6176 21.0059L71.8195 24L72.2574 15.6584L67 9.16716L75.0687 7.00591L79.6176 0Z" fill="#FBC0A8"/>
-              <path d="M146.618 0L151.166 7.00591L159.235 9.16716L153.978 15.6584L154.416 24L146.618 21.0059L138.82 24L139.257 15.6584L134 9.16716L142.069 7.00591L146.618 0Z" fill="#FBC0A8"/>
-              <path d="M113.618 0L118.166 7.00591L126.235 9.16716L120.978 15.6584L121.416 24L113.618 21.0059L105.82 24L106.257 15.6584L101 9.16716L109.069 7.00591L113.618 0Z" fill="#FBC0A8"/>
-            </svg>
-            <p class="mt-8 text-[#F85559]">Details</p>
-          </div>
-      </div>          
-    </div>   
+        <div class="flex gap-3 mt-9">
+            <div class="shadow-xl card w-96 bg-base-100">
+              <figure class="px-10 pt-10">
+                <img src="./images/fruit6.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+              <div class="items-center p-12 text-center card-body">
+                <h2 class="font-extrabold card-title">12.90$ - 18.85$</h2>
+                <div class="divider"></div>
+                <p>Apples</p>
+                <!-- ratings start -->
+                <div class="rating rating-lg rating-half">
+                  <input type="radio" name="rating-10" class="rating-hidden" />
+                  <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                  <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                  <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" checked />
+                  <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                  <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                  <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                  <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                  <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                  <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                  <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                </div>
+                <button class="mt-8 btn btn-secondary">Details</button>
+                    </div>
+                </div>          
+            <div class="shadow-xl card w-96 bg-base-100">
+              <figure class="px-10 pt-10">
+                <img src="./images/fruit7.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+              <div class="items-center p-12 text-center card-body">
+                <h2 class="font-extrabold card-title">12.90$ - 18.85$</h2>
+                <div class="divider"></div>
+                <p>Apples</p>
+                <!-- ratings start -->
+                <div class="rating rating-lg rating-half">
+                  <input type="radio" name="rating-11" class="rating-hidden" />
+                  <input type="radio" name="rating-11" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                  <input type="radio" name="rating-11" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                  <input type="radio" name="rating-11" class="bg-orange-500 mask mask-star-2 mask-half-1" checked />
+                  <input type="radio" name="rating-11" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                  <input type="radio" name="rating-11" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                  <input type="radio" name="rating-11" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                  <input type="radio" name="rating-11" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                  <input type="radio" name="rating-11" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                  <input type="radio" name="rating-11" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                  <input type="radio" name="rating-11" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                </div>
+                <button class="mt-8 btn btn-secondary">Details</button>
+                    </div>
+                </div>          
+            <div class="shadow-xl card w-96 bg-base-100">
+              <figure class="px-10 pt-10">
+                <img src="./images/fruit8.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+              <div class="items-center p-12 text-center card-body">
+                <h2 class="font-extrabold card-title">12.90$ - 18.85$</h2>
+                <div class="divider"></div>
+                <p>Apples</p>
+                <!-- ratings start -->
+                <div class="rating rating-lg rating-half">
+                  <input type="radio" name="rating-12" class="rating-hidden" />
+                  <input type="radio" name="rating-12" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                  <input type="radio" name="rating-12" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+        <input type="radio" name="rating-12" class="bg-orange-500 mask mask-star-2 mask-half-1" checked />
+                  <input type="radio" name="rating-12" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                  <input type="radio" name="rating-12" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                  <input type="radio" name="rating-12" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                  <input type="radio" name="rating-12" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                  <input type="radio" name="rating-12" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                  <input type="radio" name="rating-12" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                  <input type="radio" name="rating-12" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                </div>
+                <button class="mt-8 btn btn-secondary">Details</button>
+                    </div>
+                </div>          
+            <div class="shadow-xl card w-96 bg-base-100">
+              <figure class="px-10 pt-10">
+                <img src="./images/fruit9.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+              <div class="items-center p-12 text-center card-body">
+                <h2 class="font-extrabold card-title">12.90$ - 18.85$</h2>
+                <div class="divider"></div>
+                <p>Apples</p>
+                <!-- ratings start -->
+                <div class="rating rating-lg rating-half">
+                  <input type="radio" name="rating-13" class="rating-hidden" />
+                  <input type="radio" name="rating-13" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                  <input type="radio" name="rating-13" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                  <input type="radio" name="rating-13" class="bg-orange-500 mask mask-star-2 mask-half-1" checked />
+                  <input type="radio" name="rating-13" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                  <input type="radio" name="rating-13" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                  <input type="radio" name="rating-13" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                  <input type="radio" name="rating-13" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                  <input type="radio" name="rating-13" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                  <input type="radio" name="rating-13" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                  <input type="radio" name="rating-13" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                </div>
+                <button class="mt-8 btn btn-secondary">Details</button>
+                    </div>
+                </div>          
+            </div>     
       </section>
       <!-- Meet the team section start -->
       <section class="my-24">
