--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
            <!-- backgraund start -->
            <div class="carousel w-full">
             <div id="slide1" class="carousel-item relative w-full ">
-              <img src="./images/banner1.png" class="w-full opacity-75" />
+              <img src="./images/banner1.png" class="w-full bg-black opacity-65" />
               <div class="absolute flex justify-center transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <div class="text-center text-white">
                   <h2 class="text-5xl font-extrabold drop-shadow-md">Exotic tastes at your<br>
@@ -309,29 +309,24 @@
       </section>
       <!-- Meet the team section start -->
       <section class="my-24">
-        <div>
-          <div class="hero min-h-screen" style="background-image: url(https://daisyui.com/images/stock/photo-1507358522600-9f71e620c44e.jpg);">
-            <img src="images/team.png" alt="">
-            <div class="hero-overlay bg-opacity-60"></div>
+          <div class=" h-[600px] rounded" style="background-image: url(./images/team.png);">
+            <div class="h-full w-full bg-black bg-opacity-60 rounded"></div>
             <div class="hero-content text-center text-neutral-content">
               <div class="max-w-md text-white">
                 <h1 class="mb-5 text-5xl font-bold">Meet the team section</h1>
                 <p class="mb-5">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
               </div>
-               <!-- team slide start -->
-        <div>
-          <img src="images/member1.png" alt="">
-          <h3>Awlad Hossain</h3>
-          <p>Fruits Expert</p>
-          <i class="fab fa-facebook-square"></i>
-          <i class="fab fa-twitter-square"></i>
-          <i class="fab fa-linkedin"></i>
-        </div>
+            </div>
+            <!-- team slide start -->
+            <div>
+              <img src="images/member1.png" alt="">
+              <h3>Awlad Hossain</h3>
+              <p>Fruits Expert</p>
+              <i class="fab fa-facebook-square"></i>
+              <i class="fab fa-twitter-square"></i>
+              <i class="fab fa-linkedin"></i>
             </div>
           </div>
-        </div>
-
-        
       </section>
       <!-- Why Choose Us section start -->
       <section class="my-24">
