--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
+    <!-- fontawesome icon -->
+    <script src="https://kit.fontawesome.com/90f87eddfe.js" crossorigin="anonymous"></script>
     <!-- tailwind custom color -->
     <script>
       tailwind.config = {
@@ -309,40 +311,141 @@
       </section>
       <!-- Meet the team section start -->
       <section class="my-24">
-          <div class=" h-[600px] rounded" style="background-image: url(./images/team.png);">
-            <div class="h-full w-full bg-black bg-opacity-60 rounded"></div>
-            <div class="hero-content text-center text-neutral-content">
+          <div class="hero h-[600px] rounded" style="background-image: url(./images/team.png);">
+            <div class="hero-overlay bg-black bg-opacity-60 rounded"></div>
+            <div class="text-center text-neutral-content">
               <div class="max-w-md text-white">
                 <h1 class="mb-5 text-5xl font-bold">Meet the team section</h1>
                 <p class="mb-5">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
               </div>
-            </div>
-            <!-- team slide start -->
-            <div>
-              <img src="images/member1.png" alt="">
-              <h3>Awlad Hossain</h3>
-              <p>Fruits Expert</p>
-              <i class="fab fa-facebook-square"></i>
-              <i class="fab fa-twitter-square"></i>
-              <i class="fab fa-linkedin"></i>
+              <div class="max-w-lg text-white flex gap-8">
+                <!-- team slide start -->
+                  <div class="flex flex-col items-center gap-5">
+                    <img class="w-32" src="./images/member1.png" alt="">
+                    <div>
+                          <h3>Awlad Hossain</h3>
+                          <p>Fruits Expert</p>
+                          <div>
+                            <i class="fab fa-facebook-square"></i>
+                            <i class="fab fa-twitter-square"></i>
+                            <i class="fab fa-linkedin"></i>
+                          </div>
+                    </div>
+                  </div>
+                  <div class="flex flex-col items-center gap-5">
+                    <img class="w-32" src="./images/member2.png" alt="">
+                    <div>
+                          <h3>Awlad Hossain</h3>
+                          <p>Fruits Expert</p>
+                          <div>
+                            <i class="fab fa-facebook-square"></i>
+                            <i class="fab fa-twitter-square"></i>
+                            <i class="fab fa-linkedin"></i>
+                          </div>
+                    </div>
+                  </div>
+                  <div class="flex flex-col items-center gap-5">
+                    <img class="w-32" src="./images/member3.png" alt="">
+                    <div>
+                          <h3>Awlad Hossain</h3>
+                          <p>Fruits Expert</p>
+                          <div>
+                            <i class="fab fa-facebook-square"></i>
+                            <i class="fab fa-twitter-square"></i>
+                            <i class="fab fa-linkedin"></i>
+                          </div>
+                    </div>
+                  </div>
+                  <div class="flex flex-col items-center gap-5">
+                    <img class="w-32" src="./images/member4.png" alt="">
+                    <div>
+                          <h3>Awlad Hossain</h3>
+                          <p>Fruits Expert</p>
+                          <div>
+                            <i class="fab fa-facebook-square"></i>
+                            <i class="fab fa-twitter-square"></i>
+                            <i class="fab fa-linkedin"></i>
+                          </div>
+                    </div>
+                  </div>
+              </div>
             </div>
           </div>
       </section>
       <!-- Why Choose Us section start -->
       <section class="my-24">
-          <h2 class="text-5xl font-extrabold text-center">Why Choose Us</h2>
-          <p class="text-center">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
-        <div class="flex my-12">
           <div>
-          <h4>Dedicated Team</h4>
-          <hr>
-          <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+            <h2 class="text-5xl font-extrabold text-center">Why Choose Us</h2>
+            <p class="text-center mt-6">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+          </div>
+        <div class="my-12 flex gap-12">
+          <div>  
+            <div class="flex gap-6 items-center">
+              <div class="w-16">
+                <img src="images/icon/Group 46.png" alt="">
+              </div>
+              <div>
+                  <h4 class="text-2xl font-bold">Dedicated Team</h4>
+                  <div class="divider w-36 my-0"></div>
+                  <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+              </div>
+            </div>  
+            <div class="flex gap-6 items-center my-6">
+              <div class="w-16">
+                <img src="images/icon/icon 2.png" alt="">
+              </div>
+              <div>
+                  <h4 class="text-2xl font-bold">Fresh is Best</h4>
+                  <div class="divider w-36 my-0"></div>
+                  <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+              </div>
+            </div>  
+            <div class="flex gap-6 items-center">
+              <div class="w-16">
+                <img src="images/icon/icon 3.png" alt="">
+              </div>
+              <div>
+                  <h4 class="text-2xl font-bold">Gift Certificates</h4>
+                  <div class="divider w-36 my-0"></div>
+                  <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+              </div>
+            </div>  
+          
           </div>
           <div>
-          <img src="images/whychoose1.png" alt="">
+              <img src="images/whychoose1.png" alt="">
           </div>
-          <div>
-
+          <div class="">
+            <div class="flex gap-6 items-center">
+              <div class="w-16">
+                <img src="images/icon/icon 4.png" alt="">
+              </div>
+              <div>
+                  <h4 class="text-2xl font-bold">Integrated Supplier</h4>
+                  <div class="divider w-36 my-0"></div>
+                  <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+              </div>
+            </div>
+            <div class="flex gap-6 items-center my-6">
+              <div class="w-16">
+                <img src="images/icon/icon 5.png" alt="">
+              </div>
+              <div>
+                  <h4 class="text-2xl font-bold">Sustainable Practice</h4>
+                  <div class="divider w-36 my-0"></div>
+                  <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+              </div>
+            </div>
+            <div class="flex gap-6 items-center">
+              <div class="w-16">
+                <img src="images/icon/icon 6.png" alt="">
+              </div>
+              <div>
+                  <h4 class="text-2xl font-bold">The Benefits Only</h4>
+                  <div class="divider w-36 my-0"></div>
+                  <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+              </div>
+            </div>
           </div>
         </div> 
       </section>
