--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </style>
   </head>
   <body>
-    <header class="container mx-auto">
+    <header class="container mx-auto my-8">
       <!-- nav start -->
       <nav
         class="navbar bg-base-100 lg:bg-[#F87272] rounded-full p-1 lg:p-6 text-base-conent lg:text-white""
@@ -100,14 +100,14 @@
     </header>
     <main class="container mx-auto">
       <!-- banner section start -->
-      <section class="banner-section my-24 ">
+      <section class="banner-section my-8 ">
            <!-- backgraund start -->
            <div class="carousel w-full">
             <div id="slide1" class="carousel-item relative w-full ">
-              <img src="./images/banner1.png" class="w-full bg-black opacity-65" />
+              <img src="./images/banner1.png" class="w-full bg-black opacity-65 rounded-2xl" />
               <div class="absolute flex justify-center transform -translate-y-1/2 left-5 right-5 top-1/2">
                 <div class="text-center text-white">
-                  <h2 class="text-5xl font-extrabold drop-shadow-md">Exotic tastes at your<br>
+                  <h2 class="text-lg lg:text-5xl font-extrabold drop-shadow-md">Exotic tastes at your<br>
                   doorstep</h2>
                   <p class="drop-shadow-md text-xl" >We supply highly quality organic products</p>
                   <button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg">Shop Now</button>
@@ -140,73 +140,77 @@
               </div>
             </div>
           </div>
-        <div class="flex justify-center  gap-20 bg-white shadow p-8 absolute -mt-20 ms-56 rounded">
+        <div class="absolute flex justify-center transform -translate-y-1/2 left-5 right-5 top-3/3">
           <!-- img 1 -->
-          <div>
-            <img src="./images/fruit1.png" alt="">
-            <p>Strawberry</p>
-          </div>
-          <!-- img 2 -->
-          <div>
-            <img src="./images/fruit2.png" alt="">
-            <p>Strawberry</p>
-          </div>
-          <!-- img 3 -->
-          <div>
-            <img src="./images/fruit3.png" alt="">
-            <p>Strawberry</p>
-          </div>
-          <!-- img 4 -->
-          <div class=" ">
-            <img src="./images/fruit4.png" alt="">
-            <p>Strawberry</p>
-          </div>
-          <!-- img 4 -->
-          <div class=" ">
-            <img src="./images/fruit5.png" alt="">
-            <p>Strawberry</p>
+          <div class="bg-white hidden lg:flex p-10 rounded gap-8 shadow-lg">
+            <div>
+              <img src="./images/fruit1.png" alt="">
+              <p>Strawberry</p>
+            </div>
+            <!-- img 2 -->
+            <div>
+              <img src="./images/fruit2.png" alt="">
+              <p>Strawberry</p>
+            </div>
+            <!-- img 3 -->
+            <div>
+              <img src="./images/fruit3.png" alt="">
+              <p>Strawberry</p>
+            </div>
+            <!-- img 4 -->
+            <div class=" ">
+              <img src="./images/fruit4.png" alt="">
+              <p>Strawberry</p>
+            </div>
+            <!-- img 4 -->
+            <div class=" ">
+              <img src="./images/fruit5.png" alt="">
+              <p>Strawberry</p>
+            </div>
           </div>
         </div>
           <!-- backgraund end   -->
       </section>
       <!-- Deal of the day section start -->
       <section class="mt-52">
-        <div class="flex justify-between">
+        <div class="flex flex-col lg:flex-row justify-between">
         <div>
-          <h3 class="text-5xl font-extrabold">Deal of the day</h3>
-          <p class="mt-6">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
+          <h3 class="text-3xl text-center lg:text-left lg:text-5xl font-extrabold">Deal of the day</h3>
+          <p class="mt-6 text-center lg:text-left">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
         </div> 
         <!-- date start -->
-        <div class="grid grid-flow-col gap-5 text-center font-extrabold auto-cols-max">
-          <div class="flex flex-col">
-            <span class="countdown font-mono text-5xl">
-              <span style="--value:29;"></span>
-            </span>
-            days
-          </div> 
-          <div class="flex flex-col">
-            <span class="countdown font-mono text-5xl">
-              <span style="--value:10;"></span>
-            </span>
-            hours
-          </div> 
-          <div class="flex flex-col">
-            <span class="countdown font-mono text-5xl">
-              <span style="--value:24;"></span>
-            </span>
-            min
-          </div> 
-          <div class="flex flex-col">
-            <span class="countdown font-mono text-5xl">
-              <span style="--value:40;"></span>
-            </span>
-            sec
+        <div class="flex justify-center">
+          <div class="grid grid-flow-col gap-5 text-center font-extrabold auto-cols-max">
+            <div class="flex flex-col">
+              <span class="countdown font-mono text-3xl lg:text-5xl">
+                <span style="--value:29;"></span>
+              </span>
+              days
+            </div> 
+            <div class="flex flex-col">
+              <span class="countdown font-mono text-3xl lg:text-5xl">
+                <span style="--value:10;"></span>
+              </span>
+              hours
+            </div> 
+            <div class="flex flex-col">
+              <span class="countdown font-mono text-3xl lg:text-5xl">
+                <span style="--value:24;"></span>
+              </span>
+              min
+            </div> 
+            <div class="flex flex-col">
+              <span class="countdown font-mono text-3xl lg:text-5xl">
+                <span style="--value:40;"></span>
+              </span>
+              sec
+            </div>
           </div>
         </div>
       </div>
        
         <!-- card 1 start -->
-        <div class="flex gap-3 mt-9">
+        <div class="flex flex-col lg:flex-row justify-center gap-3 mt-9">
             <div class="shadow-xl card w-96 bg-base-100">
               <figure class="px-10 pt-10">
                 <img src="./images/fruit6.png" alt="Shoes" class="rounded-xl" />
@@ -311,14 +315,14 @@
       </section>
       <!-- Meet the team section start -->
       <section class="my-24">
-          <div class="hero h-[600px] rounded" style="background-image: url(./images/team.png);">
+          <div class="hero  lg:h-[600px] rounded" style="background-image: url(./images/team.png);">
             <div class="hero-overlay bg-black bg-opacity-60 rounded"></div>
             <div class="text-center text-neutral-content">
               <div class="max-w-md text-white">
-                <h1 class="mb-5 text-5xl font-bold">Meet the team section</h1>
+                <h1 class="mb-5 text-3xl lg:text-5xl font-bold">Meet the team section</h1>
                 <p class="mb-5">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
               </div>
-              <div class="max-w-lg text-white flex gap-8">
+              <div class="max-w-lg text-white flex flex-col lg:flex-row gap-8">
                 <!-- team slide start -->
                   <div class="flex flex-col items-center gap-5">
                     <img class="w-32" src="./images/member1.png" alt="">
@@ -375,10 +379,10 @@
       <!-- Why Choose Us section start -->
       <section class="my-24">
           <div>
-            <h2 class="text-5xl font-extrabold text-center">Why Choose Us</h2>
+            <h2 class="text-3xl lg:text-5xl font-extrabold text-center">Why Choose Us</h2>
             <p class="text-center mt-6">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
           </div>
-        <div class="my-12 flex gap-12">
+        <div class="my-12 flex flex-col lg:flex-row  gap-12">
           <div>  
             <div class="flex gap-6 items-center">
               <div class="w-16">
@@ -454,10 +458,10 @@
       <footer class="footer footer-center p-10 bg-primary text-primary-content mt-24 ">
         <div>
           <a class="btn btn-ghost normal-case text-xl lg:text-3xl">
-            <img class="w-6 lg:w-12" src="images/logo.png" alt="" />
+            <img class="w-6 lg:w-12" src="./images/logo.png" alt="" />
             Fruit Burst
           </a>
-          <div class="grid grid-flow-col gap-4 mt-10">
+          <div class="grid grid-cols-4 lg:grid-cols-6 gap-4 mt-10">
             <a class="link link-hover">Home</a> 
             <a class="link link-hover">About Us</a> 
             <a class="link link-hover">Shop</a> 
