mobile responsive done

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </style>
   </head>
   <body>
-    <header class="container mx-auto my-8">
+    <header class="container mx-auto my-2 lg:my-8">
       <!-- nav start -->
       <nav
         class="navbar bg-base-100 lg:bg-[#F87272] rounded-full p-1 lg:p-6 text-base-conent lg:text-white""
@@ -54,7 +54,7 @@
         </div>
         <div class="navbar-center">
           <a class="btn btn-ghost normal-case text-xl lg:text-3xl">
-            <img class="w-6 lg:w-12" src="images/logo.png" alt="" />
+            <img class="w-6 lg:w-12" src="./images/logo.png" alt="" />
             Fruit Burst
           </a>
         </div>
@@ -100,7 +100,7 @@
     </header>
     <main class="container mx-auto">
       <!-- banner section start -->
-      <section class="banner-section my-8 ">
+      <section class="banner-section my-2 lg:my-8 ">
            <!-- backgraund start -->
            <div class="carousel w-full">
             <div id="slide1" class="carousel-item relative w-full ">
@@ -172,11 +172,11 @@
           <!-- backgraund end   -->
       </section>
       <!-- Deal of the day section start -->
-      <section class="mt-52">
+      <section class="mt-5 lg:mt-52">
         <div class="flex flex-col lg:flex-row justify-between">
         <div>
           <h3 class="text-3xl text-center lg:text-left lg:text-5xl font-extrabold">Deal of the day</h3>
-          <p class="mt-6 text-center lg:text-left">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
+          <p class="mt-6 px-2 text-center lg:text-left">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
         </div> 
         <!-- date start -->
         <div class="flex justify-center">
@@ -384,70 +384,70 @@
           </div>
         <div class="my-12 flex flex-col lg:flex-row  gap-12">
           <div>  
-            <div class="flex gap-6 items-center">
+            <div class="flex flex-col lg:flex-row  gap-6 items-center">
               <div class="w-16">
-                <img src="images/icon/Group 46.png" alt="">
-              </div>
+                <img src="./images/icon/Group 46.png" alt="">
+              </div> 
               <div>
-                  <h4 class="text-2xl font-bold">Dedicated Team</h4>
-                  <div class="divider w-36 my-0"></div>
-                  <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                  <h4 class="text-2xl font-bold text-center lg:text-left">Dedicated Team</h4>
+                  <div class="divider w-36 my-0 mx-auto lg:mx-0"></div>
+                  <p class="text-center lg:text-left px-2">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
               </div>
             </div>  
-            <div class="flex gap-6 items-center my-6">
+            <div class="flex flex-col lg:flex-row  gap-6 items-center my-6">
               <div class="w-16">
-                <img src="images/icon/icon 2.png" alt="">
+                <img src="./images/icon/icon 2.png" alt="">
               </div>
               <div>
-                  <h4 class="text-2xl font-bold">Fresh is Best</h4>
-                  <div class="divider w-36 my-0"></div>
-                  <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                  <h4 class="text-2xl font-bold text-center lg:text-left">Fresh is Best</h4>
+                  <div class="divider w-36 my-0 mx-auto lg:mx-0"></div>
+                  <p class="text-center lg:text-left px-2">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
               </div>
             </div>  
-            <div class="flex gap-6 items-center">
+            <div class="flex flex-col lg:flex-row  gap-6 items-center">
               <div class="w-16">
-                <img src="images/icon/icon 3.png" alt="">
+                <img src="./images/icon/icon 3.png" alt="">
               </div>
               <div>
-                  <h4 class="text-2xl font-bold">Gift Certificates</h4>
-                  <div class="divider w-36 my-0"></div>
-                  <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                  <h4 class="text-2xl font-bold text-center lg:text-left">Gift Certificates</h4>
+                  <div class="divider w-36 my-0 mx-auto lg:mx-0"></div>
+                  <p class="text-center lg:text-left px-2">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
               </div>
             </div>  
           
           </div>
           <div>
-              <img src="images/whychoose1.png" alt="">
+              <img src="./images/whychoose1.png" alt="">
           </div>
           <div class="">
-            <div class="flex gap-6 items-center">
+            <div class="flex flex-col lg:flex-row  gap-6 items-center">
               <div class="w-16">
-                <img src="images/icon/icon 4.png" alt="">
+                <img src="./images/icon/icon 4.png" alt="">
               </div>
               <div>
-                  <h4 class="text-2xl font-bold">Integrated Supplier</h4>
-                  <div class="divider w-36 my-0"></div>
-                  <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                  <h4 class="text-2xl font-bold text-center lg:text-left">Integrated Supplier</h4>
+                  <div class="divider w-36 my-0 mx-auto lg:mx-0"></div>
+                  <p class="text-center lg:text-left px-2">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
               </div>
             </div>
-            <div class="flex gap-6 items-center my-6">
+            <div class="flex flex-col lg:flex-row gap-6 items-center my-6">
               <div class="w-16">
-                <img src="images/icon/icon 5.png" alt="">
+                <img src="./images/icon/icon 5.png" alt="">
               </div>
               <div>
-                  <h4 class="text-2xl font-bold">Sustainable Practice</h4>
-                  <div class="divider w-36 my-0"></div>
-                  <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                  <h4 class="text-2xl font-bold text-center lg:text-left">Sustainable Practice</h4>
+                  <div class="divider w-36 my-0 mx-auto lg:mx-0"></div>
+                  <p class="text-center lg:text-left px-2">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
               </div>
             </div>
-            <div class="flex gap-6 items-center">
+            <div class="flex flex-col lg:flex-row  gap-6 items-center">
               <div class="w-16">
-                <img src="images/icon/icon 6.png" alt="">
+                <img src="./images/icon/icon 6.png" alt="">
               </div>
               <div>
-                  <h4 class="text-2xl font-bold">The Benefits Only</h4>
-                  <div class="divider w-36 my-0"></div>
-                  <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                  <h4 class="text-2xl font-bold text-center lg:text-left">The Benefits Only</h4>
+                  <div class="divider w-36 my-0 mx-auto lg:mx-0"></div>
+                  <p class="text-center lg:text-left px-2">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
               </div>
             </div>
           </div>
@@ -461,7 +461,7 @@
             <img class="w-6 lg:w-12" src="./images/logo.png" alt="" />
             Fruit Burst
           </a>
-          <div class="grid grid-cols-4 lg:grid-cols-6 gap-4 mt-10">
+          <div class="flex flex-wrap justify-center text-lg gap-8 mt-10">
             <a class="link link-hover">Home</a> 
             <a class="link link-hover">About Us</a> 
             <a class="link link-hover">Shop</a> 
