landig page done

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                 <div class="text-center text-white">
                   <h2 class="text-lg lg:text-5xl font-extrabold drop-shadow-md">Exotic tastes at your<br>
                   doorstep</h2>
-                  <p class="drop-shadow-md text-xl" >We supply highly quality organic products</p>
-                  <button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg">Shop Now</button>
+                  <p class="drop-shadow-md text-xl my-8" >We supply highly quality organic products</p>
+                  <button class="btn btn-sm lg:btn-lg  bg-orange-600 hover:bg-orange-400 text-white">Shop Now</button>
                 </div>
               </div>
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -241,9 +241,8 @@
                       <img src="./images/fruit6.png" alt="Shoes" class="rounded-xl" />
                           </figure>
                     <div class="items-center p-12 text-center card-body">
-                      <h2 class="font-extrabold card-title">12.90$ - 18.85$</h2>
-                      <div class="divider"></div>
-                      <p>Apples</p>
+                      <h2 class="font-extrabold card-title">Apples</h2>
+                      <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                       <!-- ratings start -->
                       <div class="rating rating-lg rating-half">
                         <input type="radio" name="rating-10" class="rating-hidden" />
@@ -260,8 +259,8 @@
                       </div>
                     <div class="modal-action">
                       <!-- if there is a button in form, it will close the modal -->
-                      <button class="btn">Close</button>
-                      <button class="btn">Buy Now</button>
+                      <button class="btn btn-outline btn-error">Close</button>
+                      <button class="btn btn-outline btn-error">Buy Now</button>
                     </div>
                   </form>
                 </dialog>
@@ -289,7 +288,7 @@
                   <input type="radio" name="rating-11" class="bg-orange-500 mask mask-star-2 mask-half-1" />
                   <input type="radio" name="rating-11" class="bg-orange-500 mask mask-star-2 mask-half-2" />
                 </div>
-                <button class="mt-8 btn btn-secondary">Details</button>
+                <button class="mt-8 btn btn-secondary" onclick="my_modal_5.showModal()">Details</button>
                     </div>
                 </div>          
             <div class="shadow-xl card w-96 bg-base-100">
@@ -314,7 +313,7 @@
                   <input type="radio" name="rating-12" class="bg-orange-500 mask mask-star-2 mask-half-1" />
                   <input type="radio" name="rating-12" class="bg-orange-500 mask mask-star-2 mask-half-2" />
                 </div>
-                <button class="mt-8 btn btn-secondary">Details</button>
+                <button class="mt-8 btn btn-secondary" onclick="my_modal_5.showModal()">Details</button>
                     </div>
                 </div>          
             <div class="shadow-xl card w-96 bg-base-100">
@@ -339,10 +338,13 @@
                   <input type="radio" name="rating-13" class="bg-orange-500 mask mask-star-2 mask-half-1" />
                   <input type="radio" name="rating-13" class="bg-orange-500 mask mask-star-2 mask-half-2" />
                 </div>
-                <button class="mt-8 btn btn-secondary">Details</button>
+                <button class="mt-8 btn btn-secondary" onclick="my_modal_5.showModal()">Details</button>
                     </div>
                 </div>          
-            </div>     
+          </div>
+          <div class="flex justify-center mt-12 ">
+            <button class="btn  bg-orange-600 hover:bg-orange-400 text-white">Shop Now</button>
+          </div>     
       </section>
       <!-- Meet the team section start -->
       <section class="my-24">
